--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/hearts.png
+    - assets\images\hearts-hugging-7735218-removebg-preview 1.jpg
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
